// Regenerate bookmark_pb.ts by using `npm run generate-protobuf`

syntax = "proto3";
package bookmark;

// The bookmark fragments with binary (protobuf) data. Because fragments may use long strings to refer to the same app layer or node ids,
// these are combined in this message and compressed once instead of compressed separately
message BinaryBookmarkFragments {
  // Versioning to allow for backwards compatibility for old bookmarks
  uint32 version = 1;
  repeated BookmarkFragment fragments = 3;
}

message BookmarkFragment {
  // The identifier of BookmarkFragmentDescriptor
  string identifier = 1;
  // Wrapped protobuf
  bytes bytes = 2;
}

// Represents differences in layer visibility from the default configuration.
message LayerVisibilityBookmarkFragment {
    repeated LayerInformation layers = 1;
}

enum TristateBoolean {
    UNSET = 0;
    FALSE = 1;
    TRUE = 2;
}

message LayerInformation {
    // The ID of this layer
    string app_layer_id = 4;

    // the new visibility state of the layer.
    //
    // note: this is a tristate value, as all values in protobuf are optional,
    // and will default to `false` otherwise.
    TristateBoolean visible = 2;

    // The opacity of the layer, in percent (0-100, represented as 1-101).
    // If this value is 0, the layer-default opacity is used. A value of 1 maps to 0%,
    // etc.
    uint32 opacity = 3;
}

// The (changed) ordering of children in a layer tree
message LayerTreeOrderBookmarkFragment {
    map<string, LayerTreeOrderInformation> ordering = 1;
}

message LayerTreeOrderInformation {
    repeated string children = 1;
}
